--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -2,64 +2,64 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-    font-family: 'Poppins', sans-serif !important
+  font-family: "Poppins", sans-serif !important;
 }
 
-.title{
-    color: blue
+.title {
+  color: blue;
 }
 
-.box-tweet{
-    display: flex;
-    flex-direction: column;
-    border: 2px solid PowderBlue;
-    border-radius: 20px ;
-    padding: 20px;
-    margin-top: 20px;
-    width: 50%;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 12px;
+.box-tweet {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid PowderBlue;
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 20px;
+  width: 50%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 12px;
 }
 
-.tweets{
-    display:flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+.tweets {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.tweet-content{
-    top: 50px;
+.tweet-content {
+  top: 50px;
 }
 
-.tweet-avatar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.tweet-avatar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.tweet-up{
-    display: flex;
-    flex-direction: row;
+.tweet-up {
+  display: flex;
+  flex-direction: row;
 }
 
-.info-tweet{
-    flex-grow: 4;
-    padding: 10px;
-    
+.info-tweet {
+  flex-grow: 4;
+  padding: 10px;
 }
 
-.tweet-image{
-    margin: 10px 0;
+.tweet-image {
+  margin: 10px 0;
 }
 
-.img{
-    border-radius: 5px;
+.img {
+  border-radius: 5px;
 }
 
-.tweet-bottom{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    margin-top: 40px;
+.tweet-bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  margin-top: 40px;
+  color: rgb(29, 161, 242);
 }
